# i2p-messenger

./: .gitignore  README.md  package-lock.json  package.json  storage.db
app/: package-lock.json  package.json
app/src/: main.tsx
app/src/api/: account.ts  api.d.ts  request.ts
app/src/components/: App.tsx  Chats.tsx  Layout.tsx
app/src/storage/: storage.ts
app/src/styles/: ChatInput.css  Layout.css
desktop/: Makefile  package-lock.json  package.json  vite.config.ts
desktop/src/: main.tsx  theme.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/src/: commands.rs  main.rs
desktop/src/api/: request.ts
public/: ipc.js  main.js  preload.js  sockets.js
public/models/: db.js  index.js  messages.js  storage.js  users.js
server/: .gitignore  Pipfile  main.py  pyproject.toml
server/accounts/: controllers.py  dtos.py  models.py
server/alembic/: env.py
server/alembic/versions/: 3045b3486517_added_account.py  33ccec5ca9b9_added_message.py  c081e1eba1e0_added_message.py
server/controllers/: __init__.py  account.py  base.py  message.py
server/messages/: __init__.py  account.py  base.py  channels.py  controllers.py  dtos.py  message.py  models.py
server/models/: __init__.py  account.py  base.py  message.py
server/nodes/: controllers.py  dtos.py  models.py  transport.py
server/server/: Server.py  __init__.py  controller.py  modules.py  response.py  server.py  settings.py
server/server/controller/: __init__.py  controller.py  di.py
server/server/protocols/: __init__.py  client.py  handler.py  server.py  transport.py
(+18 files in other folders)
