[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["mihett05 <mihett05@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
SQLAlchemy = "^1.4.39"
alembic = "^1.8.1"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = "^1.10.2"
asyncio-dgram = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
